--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Click the Flowers Game - Extra Big</title>
   <style>
     html, body {
@@ -16,7 +17,7 @@
 
     #message {
       position: absolute;
-      font-size: 8em;      /* doubled from 4em */
+      font-size: 6em;      /* doubled from 4em */
       font-weight: bold;
       white-space: nowrap;
       z-index: 10;
