--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=1024, initial-scale=0.5, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width= device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Click the Flowers Game - Extra Big</title>
   <style>
     html, body {
@@ -16,8 +16,7 @@
     }
     html, body {
       touch-action: manipulation;      /* disables pinch zoom on many browsers */
-      -ms-touch-action: manipulation;  /* for IE/Edge */
-      overscroll-behavior: none;       /* optional: stops overscroll glow */
+      
     }
 
 
