--- a/index.html
+++ b/index.html
@@ -199,10 +199,14 @@
       }
     }, 500);
     // Zoom out as much as allowed
+    // Try to fully zoom out, then lock the zoom
     setTimeout(() => {
       const vp = document.querySelector('meta[name=viewport]');
-      vp.setAttribute("content", "width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=no");
+      if (vp) {
+        vp.setAttribute("content", "width=device-width, initial-scale=0.1, maximum-scale=0.1);
+      }
     }, 100);
+
 
     spawnInitialFlowers();
     move();
