--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" id="vp">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Click the Flowers Game - Extra Big</title>
   <style>
@@ -199,15 +199,6 @@
       }
     }, 500);
     // Zoom out as much as allowed
-    // Try to fully zoom out, then lock the zoom
-    setTimeout(() => {
-      const vp = document.querySelector('meta[name=viewport]');
-      if (vp) {
-        vp.setAttribute("content", "width=device-width, initial-scale=0.1, maximum-scale=0.1);
-      }
-    }, 100);
-
-
     spawnInitialFlowers();
     move();
 
