--- a/index.html
+++ b/index.html
@@ -2,56 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Click the Flowers Game - Extra Big</title>
+  <title>Bouncing Reminder with Clickable Flowers</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: lightblue;
+      background: black;
       overflow: hidden;
       height: 100%;
       width: 100%;
-      user-select: none;
     }
 
     #message {
       position: absolute;
-      font-size: 4em;      /* doubled from 4em */
+      font-size: 4em;  /* doubled from 2em */
       font-weight: bold;
       white-space: nowrap;
       z-index: 10;
       user-select: none;
     }
 
-    #topBar {
-      position: fixed;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      color: white;
-      font-size: 4em;       /* doubled from 2em */
-      font-weight: bold;
-      z-index: 100;
-      user-select: none;
-      font-family: sans-serif;
-      display: flex;
-      align-items: center;
-      gap: 30px;            /* doubled gap */
-      background: rgba(0,0,0,0.5);
-      padding: 10px 40px;   /* doubled padding */
-      border-radius: 10px;
-    }
-
-    #score {
-      color: #ff69b4;
-    }
-
     .flower {
       position: absolute;
-      font-size: 6em;      /* doubled from 3em */
+      font-size: 6m;  /* doubled from 1.5em */
       animation: float 5s infinite ease-in-out alternate;
       pointer-events: auto;
       cursor: pointer;
+      user-select: none;
     }
 
     @keyframes float {
@@ -65,94 +42,34 @@
   </style>
 </head>
 <body>
-  <div id="topBar">
-    Click the flowers: <span id="score">0</span>
-  </div>
-
   <div id="message">Take your Drugs, NOW!</div>
 
   <script>
     const message = document.getElementById('message');
-    const scoreEl = document.getElementById('score');
-    const flowerEmojis = ['🌸', '🌼', '🌻', '🌺'];
-    let flowers = [];
-    let score = 0;
     let x = 100, y = 100;
     let dx = 2, dy = 2;
 
-    const initialFlowerCount = 30;
-    let spawningRapidly = false;
+    const flowerEmojis = ['🌸', '🌼', '🌻', '🌺'];
+    const flowerCount = 30;
 
-    // Spawn interval parameters
-    let spawnInterval = 1000;  // initial 1 sec
-    let spawnDecayRate = 0.9;  // decay factor per spawn (exponential speedup)
-    let minSpawnInterval = 50; // minimum interval 50 ms
-    let rapidSpawnTimeout;
-
-    function randomColor() {
-      return `hsl(${Math.floor(Math.random() * 360)}, 100%, 50%)`;
-    }
-
-    // Flower size for edge offset calculation
-    const flowerSize = 96; // doubled from 48 (6em approx)
-
-    // Returns a safe random position, avoiding edges
-    function randomSafePosition() {
-      const w = window.innerWidth;
-      const h = window.innerHeight;
-
-      // Leave margin so flowers don't spawn stuck on edges
-      const margin = flowerSize * 1.5;
-
-      const left = Math.random() * (w - 2 * margin) + margin;
-      const top = Math.random() * (h - 2 * margin) + margin;
-
-      return { left, top };
-    }
-
-    function createFlower() {
+    for (let i = 0; i < flowerCount; i++) {
       const flower = document.createElement('div');
       flower.classList.add('flower');
       flower.textContent = flowerEmojis[Math.floor(Math.random() * flowerEmojis.length)];
-
-      const pos = randomSafePosition();
-      flower.style.left = `${pos.left}px`;
-      flower.style.top = `${pos.top}px`;
+      flower.style.left = `${Math.random() * window.innerWidth}px`;
+      flower.style.top = `${Math.random() * window.innerHeight}px`;
       flower.style.animationDelay = `${Math.random() * 5}s`;
 
+      // Add click event to remove the flower on click
       flower.addEventListener('click', () => {
         flower.remove();
-        score++;
-        scoreEl.textContent = score;
-        flowers = flowers.filter(f => f !== flower);
-
-        if (flowers.length === 0 && !spawningRapidly) {
-          startRapidSpawning();
-        }
       });
 
       document.body.appendChild(flower);
-      flowers.push(flower);
     }
 
-    function spawnInitialFlowers() {
-      for (let i = 0; i < initialFlowerCount; i++) {
-        createFlower();
-      }
-    }
-
-    function startRapidSpawning() {
-      spawningRapidly = true;
-
-      function spawnAndAccelerate() {
-        createFlower();
-        // Decrease interval exponentially
-        spawnInterval = Math.max(minSpawnInterval, spawnInterval * spawnDecayRate);
-        clearTimeout(rapidSpawnTimeout);
-        rapidSpawnTimeout = setTimeout(spawnAndAccelerate, spawnInterval);
-      }
-
-      spawnAndAccelerate();
+    function randomColor() {
+      return `hsl(${Math.floor(Math.random() * 360)}, 100%, 50%)`;
     }
 
     function move() {
@@ -185,14 +102,10 @@
       requestAnimationFrame(move);
     }
 
-    // Initial color change for message every 0.5 sec (only if not rapid spawning)
     setInterval(() => {
-      if (!spawningRapidly) {
-        message.style.color = randomColor();
-      }
+      message.style.color = randomColor();
     }, 500);
 
-    spawnInitialFlowers();
     move();
 
     window.addEventListener('resize', () => {
