--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      background: black;
+      background: lightblue;
       overflow: hidden;
       height: 20%;
       width: 20%;
@@ -26,7 +26,7 @@
 
     .flower {
       position: absolute;
-      font-size: 6m;  /* doubled from 1.5em */
+      font-size: 18m;  /* doubled from 1.5em */
       animation: float 5s infinite ease-in-out alternate;
       pointer-events: auto;
       cursor: pointer;
