--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     .flower {
       position: absolute;
-      font-size: 18m;  /* doubled from 1.5em */
+      font-size: 18em;  /* doubled from 1.5em */
       animation: float 5s infinite ease-in-out alternate;
       pointer-events: auto;
       cursor: pointer;
